--- a/src/main.css
+++ b/src/main.css
@@ -71,14 +71,14 @@
 /* #region Header styles. */
 
 header {
-    border-bottom: 1px solid #e9ecef;
     margin-bottom: 2rem;
     padding-bottom: 1rem;
 }
 
-header h3 {
-    font-size: 1.5rem!important;
+.header-subtitle {
+    font-size: 1.8rem;;
     margin-top: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 header .logo {
@@ -91,26 +91,25 @@ header .logo {
 /* #region Section title and description styles. */
 
 .section-title span {
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 
 .section-title .bi {
     color: var(--bs-gray-800);
-    margin-right: 0.4rem;
-    margin-top: -2px;
+    margin-right: 0.5rem;
+    margin-top: -3px;
 }
 
 .section-description {
     color: var(--bs-gray-800);
     margin-top: 1rem;
-    font-size: 0.9rem;
+    font-size: 1rem;
     margin-bottom: 1rem;
 }
 
 .section-subtitle {
     font-size: 1rem;
     margin-bottom: 1rem;
-    color: var(--bs-gray-600);
 }
 
 /* #endregion */
@@ -141,6 +140,11 @@ header .logo {
 }
 
 .control input {
+    font-size: 0.9rem;
+}
+
+.control .form-check > label {
+    color: var(--bs-gray-800);
     font-size: 0.9rem;
 }
 
@@ -200,6 +204,15 @@ header .logo {
     font-size: 0.85rem;
 }
 
+.candidate-receiver .question  {
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+}
+
+.votes-added {
+    font-size: 0.8rem;
+}
+
 /* #endregion */
 
 
@@ -236,6 +249,10 @@ footer .heart {
 
 footer .heart:hover {
     transform: rotate(360deg);
+}
+
+footer .footer-call {
+    margin: 0.5rem auto;
 }
 
 footer .github {
