--- a/src/main.css
+++ b/src/main.css
@@ -79,6 +79,7 @@ header {
     font-size: 1.8rem;;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
+    color: #6c757dcf;
 }
 
 header .logo {
@@ -272,6 +273,36 @@ footer .github {
 
 footer .github a {
     color: #000000;
+}
+
+/* #endregion */
+
+
+/* #region Animations. */
+
+.flag-animation {
+    background: linear-gradient(
+        to right,
+        #002B7F 20%,
+        #002B7F 30%,
+        #FCD116 70%,
+        #CE1126 80%
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+    background-size: 500% auto;
+    animation: textShine 5s ease-in-out infinite alternate;
+}
+
+@keyframes textShine {
+    0% {
+        background-position: 0% 50%;
+    }
+    100% {
+        background-position: 100% 50%;
+    }
 }
 
 /* #endregion */
