Design: add cursive Google font

--- a/src/main.css
+++ b/src/main.css
@@ -65,6 +65,12 @@
     font-weight: bold;
 }
 
+.cursive {
+    font-family: "Cedarville Cursive", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 /* #endregion */
 
 
