Design: remove hover animation for the chart panel

--- a/src/main.css
+++ b/src/main.css
@@ -271,7 +271,7 @@ header .header-logo-preposition {
     transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.output-forecast:hover, .output-graphic:hover {
+.output-forecast:hover {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
